--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -112,7 +112,7 @@ mark {
     margin-bottom: 0px;
 }
 .bf-color {
-    background-color: #3f51b5 !important;
+    background-color: #030303 !important;
 }
 .bf-text-color {
     color: #3f51b5 !important;
